Closed Bug 80468 Opened 24 years ago Closed 24 years ago

Lock icon never locks

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: lord, Assigned: darin.moz)

References

Details

(Keywords: regression, smoketest)

Attachments

(2 files)

Build: 05-11-06 OS: WinME The lock icon does not lock when visiting SSL web sites.
Target Milestone: --- → 2.0
*** Bug 80463 has been marked as a duplicate of this bug. ***
*** Bug 80724 has been marked as a duplicate of this bug. ***
Adding keywords.
OS: other → All
Priority: -- → P2
Hardware: PC → All
Status: NEW → ASSIGNED
Priority: P2 → P1
Will this make it into mozilla milestone 0.9.1? Thanks
Keywords: nsbeta1
This is currently the top bug on my list. It should make 0.9.1, but no ETA yet.
The new netwerk implementation of HTTPChannel does not implement GetSecurityInfo. Reassigning.
Assignee: thayes → darin
Status: ASSIGNED → NEW
Component: Client Library → Networking: HTTP
Product: PSM → Browser
Target Milestone: 2.0 → mozilla0.9.1
Version: 2.0 → other
Keywords: patch
r=gagan
what if mSocketTransport is null in GetSecurityInfo()
I suppose it could be null if we failed to create a socket transport. On that note, I should check mSocketTransport... patch coming.
Attached patch revised patchSplinter Review
fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified fixed on commercial builds: windows 2001-05-22-06-trunk linux 2001-05-22-05-trunk
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: