Fixes bug 80468 "Lock icon never locks" r=gagan, sr=dougt